--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     padding: 0;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    /* overflow-y: hidden; */
+    /* overflow: hidden; */
     /* font-family: fantasy; */
 }
 
@@ -220,10 +220,6 @@ button:focus {
 }
 
 /* contact form */
-body {
-    background-color: #444442;
-    padding-top: 85px;
-}
 
 h1 .inp {
     font-family: 'Poppins', sans-serif, 'arial';
