--- a/style.css
+++ b/style.css
@@ -333,3 +333,65 @@ input[type=checkbox]:checked+label {
     color: #f00;
     font-style: normal;
 }
+
+/* Footer */
+footer {
+    background-color: #25339b;
+    text-align: center;
+    text-transform: uppercase;
+    padding-top: 30px;
+    margin-top: auto;
+}
+
+footer li {
+    list-style: none;
+    margin: 10px;
+    display: inline-block;
+}
+
+/* .icons a {
+    display: flex;
+    background: #000000;
+    font-size: 20px;
+    padding: 14px;
+    border-radius: 100%;
+    text-decoration: none;
+} */
+
+.github :hover {
+    color: #000000;
+}
+
+.facebook :hover {
+    color: #2c63f9;
+}
+
+.linkedin :hover {
+    color: #2ccdf9;
+}
+
+.instagram :hover {
+    color: #fa5ed8;
+}
+
+.menu a {
+    color: #ffffff;
+    /* text-transform: capitalize; */
+    text-decoration: none;
+}
+
+.menu a:hover {
+    color: #000000;
+}
+
+.footer-copyright {
+    background-color: #6da0ff;
+    color: #ffffff;
+    padding: 15px;
+    margin-top: 30px;
+    text-transform: capitalize;
+}
+
+.footer-copyright p {
+    margin-bottom: 0px;
+}
