--- a/style.css
+++ b/style.css
@@ -10,14 +10,6 @@ body {
     /* font-family: fantasy; */
 }
 
-
-.hline {
-    padding-bottom: 15px;
-    border-bottom-style: solid;
-    border-bottom-width: 3.1px;
-    width: fit-content;
-}
-
 a {
     color: #fff;
 }
@@ -219,121 +211,6 @@ button:focus {
     box-shadow: inset 10em 0 0 0 var(--hover);
 }
 
-/* contact form */
-
-h1 .inp {
-    font-family: 'Poppins', sans-serif, 'arial';
-    font-weight: 600;
-    font-size: 72px;
-    color: white;
-    text-align: center;
-}
-
-h4 .inp {
-    font-family: 'Roboto', sans-serif, 'arial';
-    font-weight: 400;
-    font-size: 20px;
-    color: #9b9b9b;
-    line-height: 1.5;
-}
-
-/* ///// inputs /////*/
-
-input:focus~label,
-textarea:focus~label,
-input:valid~label,
-textarea:valid~label {
-    font-size: 0.75em;
-    color: #999;
-    top: -5px;
-    -webkit-transition: all 0.225s ease;
-    transition: all 0.225s ease;
-}
-
-.styled-input {
-    float: left;
-    width: 293px;
-    margin: 1rem 0;
-    position: relative;
-    border-radius: 4px;
-}
-
-@media only screen and (max-width: 768px) {
-    .styled-input {
-        width: 100%;
-    }
-}
-
-.styled-input label {
-    color: #999;
-    padding: 1.3rem 30px 1rem 30px;
-    position: absolute;
-    top: 10px;
-    left: 0;
-    -webkit-transition: all 0.25s ease;
-    transition: all 0.25s ease;
-    pointer-events: none;
-}
-
-.styled-input.wide {
-    width: 650px;
-    max-width: 100%;
-}
-
-input,
-textarea {
-    padding: 30px;
-    border: 0;
-    width: 100%;
-    font-size: 1rem;
-    background-color: #283464;
-    color: white;
-    border-radius: 4px;
-}
-
-input:focus,
-textarea:focus {
-    outline: 0;
-}
-
-input:focus~span,
-textarea:focus~span {
-    width: 100%;
-    -webkit-transition: all 0.075s ease;
-    transition: all 0.075s ease;
-}
-
-textarea {
-    width: 100%;
-    min-height: 15em;
-}
-
-.input-container {
-    width: 650px;
-    max-width: 100%;
-    margin: 20px auto 25px auto;
-}
-
-
-
-@media (max-width: 768px) {
-    .submit-btn {
-        width: 100%;
-        float: none;
-        text-align: center;
-    }
-}
-
-input[type=checkbox]+label {
-    color: #ccc;
-    font-style: italic;
-}
-
-input[type=checkbox]:checked+label {
-    color: #f00;
-    font-style: normal;
-}
-
 /* Footer */
 footer {
     background-color: #25339b;
@@ -348,15 +225,6 @@ footer li {
     margin: 10px;
     display: inline-block;
 }
-
-/* .icons a {
-    display: flex;
-    background: #000000;
-    font-size: 20px;
-    padding: 14px;
-    border-radius: 100%;
-    text-decoration: none;
-} */
 
 .github :hover {
     color: #000000;
@@ -381,7 +249,7 @@ footer li {
 }
 
 .menu a:hover {
-    color: #000000;
+    color: #eeff06;
 }
 
 .footer-copyright {
